# curleave

./: CMakeLists.txt  README.md  curleave.cpp  hyprpm.toml  meson.build
curleave/: CMakeLists.txt  Makefile  README.md  curleave.cpp  meson.build
